<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz2_interactive_marker_plugin</name>
  <version>0.0.0</version>
  <description>RViz2 plugin for Interactive Marker</description>
  <maintainer email="kazulab10969@outlook.jp">kazuma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>Qt5Widgets</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz_rendering</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
